# v-kaelincai_26_01_14_case1

./: Claude-haiku-4.5.txt  grok-fast.txt  oswe-mini-m23a1s255-new.txt  oswe-mini-m23a2s165.txt  oswe-mini-m23a3s430.txt  oswe-mini-prime-new.txt
oswe-mini-m23a1s255-new/issue_project_fixed/: README.md  SOLUTION.md  fixed_version.py  inspect_import.py  pyproject.toml  repro_unknown.py  run_all_checks.py  validation_run.py
oswe-mini-m23a1s255-new/issue_project_fixed/src/fake_useragent/: __init__.py  errors.py  fake.py  log.py  utils.py
oswe-mini-m23a1s255-new/issue_project_fixed/src/fake_useragent/data/: browsers.json
oswe-mini-m23a1s255-new/issue_project_fixed/src/fake_useragent_fixed.egg-info/: PKG-INFO  SOURCES.txt
oswe-mini-m23a1s255-new/issue_project_fixed/tests/: conftest.py  test_filters_and_edgecases.py  test_randomness.py
oswe-mini-m23a2s165/issue_project_fixed/: README.md  SOLUTION.md  fixed_version.py  pyproject.toml  test_duplicate_check.py
oswe-mini-m23a2s165/issue_project_fixed/src/fake_useragent/: fake.py  utils.py
oswe-mini-m23a2s165/issue_project_fixed/src/fake_useragent_fixed.egg-info/: PKG-INFO  SOURCES.txt
oswe-mini-m23a2s165/issue_project_fixed/tests/: conftest.py  test_basic.py  test_issue_446.py
oswe-mini-m23a3s430/issue_project_fixed/: README.md  SOLUTION.md  fixed_version.py  pyproject.toml
oswe-mini-m23a3s430/issue_project_fixed/fake_useragent_fixed.egg-info/: PKG-INFO
oswe-mini-m23a3s430/issue_project_fixed/src/fake_useragent/: __init__.py  fake.py  utils.py
oswe-mini-m23a3s430/issue_project_fixed/tests/: test_issue_446.py
(+50 files in other folders)
